MFH: - Fixed bug #28248 (Can not compile --with-sybase and freetds)